# protoc-gen-bq-schema-fork

./: .bazelignore  .bazelrc  .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  NOTICE  README.md  WORKSPACE  defs.bzl  go.mod  go.sum  main.go
.github/workflows/: dev.yml  go.yml  main.yml
api/: BUILD  BUILD.bazel  bq_field.proto  bq_table.proto
conf/: deps.bzl
configs/: go_deps.bzl
docs/: BUILD.bazel  building.md  contributors.md  protos.md
internal/converter/: BUILD  BUILD.bazel  comments.go  convert.go  protopackage.go
protos/: BUILD.bazel
test/: comments_test.go  field_option_test.go  plugin_test.go
test/converter/: BUILD  BUILD.bazel  comments_test.go  field_option_test.go  plugin_test.go
