module(
    name = "protoc-gen-bq-schema",
    version = "3.0.0",
    compatibility_level = 1,
)

# --- Base & Language Rules ---
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "buildozer", version = "8.2.0.bcr.1")
bazel_dep(name = "bazel_skylib", version = "1.8.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_go", version = "5.3.1")
bazel_dep(name = "rules_proto_grpc_doc", version = "5.3.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googleapis", version = "0.0.0-20241220-5e258e33.bcr.1")
bazel_dep(name = "grpc", version = "1.73.1")
bazel_dep(name = "gazelle", version = "0.44.0")

################################################################################
# Go Lang Setup
################################################################################
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.24.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_glog",
    "org_golang_google_protobuf",
)
