# Copyright 2014 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_doc//:defs.bzl", "doc_markdown_compile")

exports_files([
    "bq_field.proto",
    "bq_table.proto",
])

proto_library(
    name = "bq_schema_proto_lib",
    srcs = [
        "bq_field.proto",
        "bq_table.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

doc_markdown_compile(
    name = "docs",
    protos = [
        ":bq_schema_proto_lib",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protos_go_proto",
    importpath = "github.com/GoogleCloudPlatform/protoc-gen-bq-schema/v3/protos",
    proto = ":bq_schema_proto_lib",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protos",
    embed = [":protos_go_proto"],
    importpath = "github.com/GoogleCloudPlatform/protoc-gen-bq-schema/v3/protos",
    visibility = ["//visibility:public"],
)
