# Copyright 2014 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library")
load("@rules_proto_grpc_go//:defs.bzl", "go_proto_library")

go_proto_library(
    name = "bq_schema_go_proto_lib",
    importpath = "github.com/GoogleCloudPlatform/protoc-gen-bq-schema/v3/protos",
    protos = ["//api:bq_schema_proto_lib"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_protobuf//types/descriptorpb",
    ],
)

go_library(
    name = "converter",
    srcs = [
        "comments.go",
        "convert.go",
        "protopackage.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/protoc-gen-bq-schema/v3/internal/converter",
    visibility = ["//:__subpackages__"],
    deps = [
        ":bq_schema_go_proto_lib",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/descriptorpb",
        "@org_golang_google_protobuf//types/pluginpb",
    ],
)
